infra/k8s/manifests/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mapbot-backend
  namespace: mapbot
  labels:
    app.kubernetes.io/name: mapbot-backend
    app.kubernetes.io/version: v1
spec:
  selector:
    app.kubernetes.io/name: mapbot-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: grpc
      protocol: TCP
      port: 9090
      targetPort: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapbot-backend
  namespace: mapbot
  labels:
    app.kubernetes.io/name: &name mapbot-backend
    app.kubernetes.io/version: &version v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/version: *version
    spec:
      containers:
        - name: mapbot-backend
          image: docker.io/g2ferret/mapbot-api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
