infra/k8s/manifests/embedding.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: embedding
  namespace: mapbot
  labels:
    app.kubernetes.io/name: embedding
    app.kubernetes.io/version: v2
spec:
  selector:
    app.kubernetes.io/name: embedding
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: embedding
  namespace: mapbot
  labels:
    app.kubernetes.io/name: &name embedding
    app.kubernetes.io/version: &version v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/version: *version
    spec:
      containers:
        - name: embedding
          image: g2ferret/mapbot_embedding:v2
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 50051
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
