infra/k8s/manifests/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mapbot-frontend
  namespace: mapbot
  labels:
    app.kubernetes.io/name: mapbot-frontend
    app.kubernetes.io/version: v3
spec:
  selector:
    app.kubernetes.io/name: mapbot-frontend
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapbot-frontend
  namespace: mapbot
  labels:
    app.kubernetes.io/name: &name mapbot-frontend
    app.kubernetes.io/version: &version v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/version: *version
    spec:
      containers:
        - name: mapbot-frontend
          image: g2ferret/mapbot-frontend:v3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
