infra/k8s/manifests/osrm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: osrm
  namespace: mapbot
  labels:
    app.kubernetes.io/name: osrm
    app.kubernetes.io/version: v1
spec:
  selector:
    app.kubernetes.io/name: osrm
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osrm
  namespace: mapbot
  labels:
    app.kubernetes.io/name: &name osrm
    app.kubernetes.io/version: &version v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/version: *version
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64

      containers:
        - name: osrm
          image: osrm/osrm-backend
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
          command: ["osrm-routed", "--algorithm", "mld", "/data/moscow-latest.osrm"]
          volumeMounts:
            - name: osrm-data
              mountPath: /data
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"

      volumes:
        - name: osrm-data
          persistentVolumeClaim:
            claimName: osrm-data
