infra/k8s/manifests/qdrant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qdrant
  namespace: mapbot
  labels:
    app.kubernetes.io/name: qdrant
    app.kubernetes.io/version: v1
spec:
  selector:
    app.kubernetes.io/name: qdrant
  ports:
    - name: http
      protocol: TCP
      port: 6333
      targetPort: http
    - name: grpc
      protocol: TCP
      port: 6334
      targetPort: grpc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qdrant
  namespace: mapbot
  labels:
    app.kubernetes.io/name: &name qdrant
    app.kubernetes.io/version: &version v1
spec:
  serviceName: qdrant
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/version: *version
    spec:
      containers:
        - name: qdrant
          image: qdrant/qdrant:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 6333
            - name: grpc
              containerPort: 6334
          volumeMounts:
            - name: storage
              mountPath: /qdrant/storage
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        storageClassName: nvme.network-drives.csi.timeweb.cloud
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
