infra/k8s/manifests/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: mapbot
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/version: v1
spec:
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: mapbot
  labels:
    app.kubernetes.io/name: &name redis
    app.kubernetes.io/version: &version v1
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/version: *version
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          command: ["redis-server","--appendonly","yes"]
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: nvme.network-drives.csi.timeweb.cloud
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
