infra/k8s/manifests/gotify.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
  namespace: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: ghcr.io/gotify/server:2.6.1
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gotify-data
---
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: gotify
spec:
  selector:
    app: gotify
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gotify
  namespace: gotify
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: gotify.wooork.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gotify
                port:
                  number: 80
  tls:
    - hosts:
        - gotify.wooork.space
      secretName: gotify-tls
